@@ -1,3 +1,16 @@
 PdfDesc: The main PDF in the EXAMPLE set
 PdfType: main # or 'error' or 'replica'
+Flavors: 21
+---
+0.0    0.5    1.0
+10.0 100.0 1000.0
+10.0
+5.0
+2.0
+8.0
+4.0
+1.0
+4.0
+2.0
+0.5
 ---
